k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: family-day-web
spec:
  selector:
    app: family-day-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
